# pytest-asgi-server

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: release-drafter.yml
.github/workflows/: draft-release.yml  pypi.yml  test-pypi.yml  test.yml  tests.yml
pytest_asgi_server/: clients.py  errors.py  plugin.py  servers.py  utils.py
pytest_asgi_xclient/: __init__.py  clients.py  servers.py  utils.py
tests/: asgi_app.py  conftest.py  test_uvicorn_thread_server.py  test_uvicorn_xprocess_server.py  test_xclient.py  test_xserver.py  test_xserver_address.py
