[tool.poetry]
name = "pytest-asgi-xclient"
version = "0.1.0"
description = ""
authors = ["Gary Tyler <mail@garytyler.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/garytyler/pytest-asgi-xclient"
homepage = "https://github.com/garytyler/pytest-asgi-xclient"
packages = [
    { include = "asgi_xclient/**/*.py" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"
pytest-xprocess = "^0.13.1"
pytest-asyncio = "^0.10.0"
httpx = "^0.12.1"
websockets = "^8.1"
asgi-lifespan = "^1.0.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.770"
isort = "^4.3.21"
starlette = "^0.13.3"
